--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CXJTCKFWQL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1NMW2WL8F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-CXJTCKFWQL');
+      gtag('config', 'G-S1NMW2WL8F');
     </script>
     
     <meta charset="UTF-8">
