--- a/index.html
+++ b/index.html
@@ -1,6 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": ["VideoGame", "WebApplication"],
+  "name": "Infinite Wordle",
+  "url": "https://infinitewordle.github.io/",
+  "image": "https://infinitewordle.github.io/og-image.png",
+  "description": "Play unlimited Wordle games. No daily limits, just endless word guessing fun. Free and easy to play.",
+  "genre": ["Word Game", "Puzzle", "Logic Game"],
+  "keywords": "infinite wordle, wordle unlimited, word game, connections, spelling bee, daily wordle",
+  "applicationCategory": "Game",
+  "operatingSystem": "Web Browser",
+  "playMode": "SinglePlayer",
+  "author": {
+    "@type": "Organization",
+    "name": "Infinite Wordle",
+    "url": "https://infinitewordle.github.io/"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "category": "Free"
+  },
+  "gameItem": [
+    {
+      "@type": "VideoGame",
+      "name": "Connections",
+      "url": "https://infinitewordle.github.io/connections.html",
+      "description": "Group words that share a common thread."
+    },
+    {
+      "@type": "VideoGame",
+      "name": "Spelling Bee",
+      "url": "https://infinitewordle.github.io/spelling-bee.html",
+      "description": "How many words can you make with 7 letters?"
+    },
+    {
+      "@type": "VideoGame",
+      "name": "The Crossword",
+      "url": "https://infinitewordle.github.io/crossword.html",
+      "description": "The daily puzzle that tests your knowledge."
+    },
+    {
+      "@type": "VideoGame",
+      "name": "The Mini Crossword",
+      "url": "https://infinitewordle.github.io/mini-crossword.html",
+      "description": "A bite-sized crossword solve in seconds."
+    }
+  ]
+}
+</script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1NMW2WL8F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
