--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <p class="hero-subtitle">Guess the hidden word in 6 tries. A new puzzle is always waiting for you.</p>
                 
                 <div class="game-wrapper">
-                    <iframe src="https://wordlegame.org/embed" title="Infinite Wordle Game" allowfullscreen></iframe>
+                    <iframe src="https://wordle-unblocked.github.io/" title="Infinite Wordle Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
