--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@
                         <li><a href="/mini-crossword.html">The Mini</a></li>
                     </ul>
                 </div>
+                
+                <div class="footer-widget">
+                    <h4 class="widget-title">Games</h4>
+                    <ul class="widget-links">
+                        <li><a href="/">Wordle</a></li>
+                        <li><a href="/connections.html">Connections</a></li>
+                        <li><a href="/spelling-bee.html">Spelling Bee</a></li>
+                        <li><a href="/crossword.html">The Crossword</a></li>
+                        <li><a href="/mini-crossword.html">The Mini</a></li>
+                    </ul>
+                </div>
 
                 <div class="footer-widget">
                     <h4 class="widget-title">Subscribe</h4>
