--- a/index.html
+++ b/index.html
@@ -299,13 +299,11 @@
                 </div>
                 
                 <div class="footer-widget">
-                    <h4 class="widget-title">Games</h4>
+                    <h4 class="widget-title">Pages</h4>
                     <ul class="widget-links">
-                        <li><a href="/">Wordle</a></li>
-                        <li><a href="/connections.html">Connections</a></li>
-                        <li><a href="/spelling-bee.html">Spelling Bee</a></li>
-                        <li><a href="/crossword.html">The Crossword</a></li>
-                        <li><a href="/mini-crossword.html">The Mini</a></li>
+                        <li><a href="/About.html">About</a></li>
+                        <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="/Terms-of-use.html">Terms of Use</a></li>                        
                     </ul>
                 </div>
 
