--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
                 <div class="footer-widget">
                     <h4 class="widget-title">Pages</h4>
                     <ul class="widget-links">
-                        <li><a href="/About.html">About</a></li>
+                        <li><a href="/about.html">About</a></li>
                         <li><a href="/privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="/Terms-of-use.html">Terms of Use</a></li>                        
+                        <li><a href="/terms-of-use.html">Terms of Use</a></li>                        
                     </ul>
                 </div>
 
