--- a/about.html
+++ b/about.html
@@ -68,17 +68,17 @@
                 <div style="text-align: left; max-width: 800px; margin: 0 auto; font-size: 16px; color: var(--text-secondary);">
                     
                     <h2 class="section-title" style="text-align: left; font-size: 28px; margin-bottom: 24px;">Our Mission</h2>
-                    <p style="margin-bottom: 32px;">The daily limit on great word games is frustrating. **Infinite Wordle** was created with one simple goal: to provide an endless supply of your favorite word and logic puzzles, free and without any daily constraints. We believe that when you want to play, you should be able to play.</p>
+                    <p style="margin-bottom: 32px;">The daily limit on great word games is frustrating. Infinite Wordle was created with one simple goal: to provide an endless supply of your favorite word and logic puzzles, free and without any daily constraints. We believe that when you want to play, you should be able to play.</p>
 
                     <h2 class="section-title" style="text-align: left; font-size: 28px; margin-bottom: 24px;">What We Offer</h2>
                     <ul style="list-style: disc; padding-left: 20px; margin-bottom: 32px;">
-                        <li style="margin-bottom: 12px;">**Unlimited Wordle:** Play as many 5-letter puzzles as you want, back-to-back.</li>
-                        <li style="margin-bottom: 12px;">**A Puzzle Hub:** We feature popular game formats like Connections, Spelling Bee, and the Mini Crossword, all aggregated for easy, unlimited access.</li>
-                        <li style="margin-bottom: 12px;">**Simple & Accessible:** A clean, fast, and responsive design that works perfectly on any device, day or night.</li>
+                        <li style="margin-bottom: 12px;">Unlimited Wordle: Play as many 5-letter puzzles as you want, back-to-back.</li>
+                        <li style="margin-bottom: 12px;">A Puzzle Hub: We feature popular game formats like Connections, Spelling Bee, and the Mini Crossword, all aggregated for easy, unlimited access.</li>
+                        <li style="margin-bottom: 12px;">Simple & Accessible: A clean, fast, and responsive design that works perfectly on any device, day or night.</li>
                     </ul>
 
                     <h2 class="section-title" style="text-align: left; font-size: 28px; margin-bottom: 24px;">Our Technology</h2>
-                    <p style="margin-bottom: 32px;">This website is built using **pure HTML, CSS, and JavaScript**, focusing on performance and reliability. Our games are delivered through integrated third-party platforms to ensure a smooth, authentic, and truly infinite gaming experience.</p>
+                    <p style="margin-bottom: 32px;">This website is built using pure HTML, CSS, and JavaScript, focusing on performance and reliability. Our games are delivered through integrated third-party platforms to ensure a smooth, authentic, and truly infinite gaming experience.</p>
                     
                     <h2 class="section-title" style="text-align: left; font-size: 28px; margin-bottom: 24px;">Contact Us</h2>
                     <p>If you have any questions, suggestions for new games, or just want to say hello, you can reach out via our social media links in the footer.</p>
