--- a/index.html
+++ b/index.html
@@ -296,16 +296,7 @@
                         <li><a href="/crossword.html">The Crossword</a></li>
                         <li><a href="/mini-crossword.html">The Mini</a></li>
                     </ul>
-                </div>
-                
-                <div class="footer-widget">
-                    <h4 class="widget-title">Pages</h4>
-                    <ul class="widget-links">
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="/terms-of-use.html">Terms of Use</a></li>                        
-                    </ul>
-                </div>
+                </div>                             
 
                 <div class="footer-widget">
                     <h4 class="widget-title">Subscribe</h4>
@@ -329,6 +320,13 @@
                         <text x="16" y="22" font-family="monospace" font-size="18" font-weight="bold" text-anchor="middle" fill="var(--bg-primary)">I</text>
                     </svg>
                     <span>INFINITE WORDLE</span>
+                </div>
+                <div class="footer-links">
+                    <a href="/about.html" class="footer-link">About</a>
+                    <span class="footer-link-separator">|</span>
+                    <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
+                    <span class="footer-link-separator">|</span>
+                    <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
                 </div>
                 <p class="copyright">&copy; 2025 Infinite Wordle. All rights reserved.</p>
             </div>
