--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -150,7 +150,7 @@
                 <div class="footer-links">
                     <a href="/about.html" class="footer-link">About</a>
                     <span class="footer-link-separator">|</span>
-                    <a href="#about-footer" class="footer-link">Privacy Policy</a>
+                    <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
                     <span class="footer-link-separator">|</span>
                     <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
                 </div>
