--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -141,6 +141,7 @@
                         <text x="16" y="22" font-family="monospace" font-size="18" font-weight="bold" text-anchor="middle" fill="var(--bg-primary)">I</text>
                     </svg>
                     <span>INFINITE WORDLE</span>
+                </div>
                 <div class="footer-links">
                     <a href="/about.html" class="footer-link">About</a>
                     <span class="footer-link-separator">|</span>
