--- a/about.html
+++ b/about.html
@@ -135,7 +135,14 @@
                         <text x="16" y="22" font-family="monospace" font-size="18" font-weight="bold" text-anchor="middle" fill="var(--bg-primary)">I</text>
                     </svg>
                     <span>INFINITE WORDLE</span>
-                </div>                
+                </div>
+                <div class="footer-links">
+                    <a href="/about.html" class="footer-link">About</a>
+                    <span class="footer-link-separator">|</span>
+                    <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
+                    <span class="footer-link-separator">|</span>
+                    <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
+                </div>
                 <p class="copyright">&copy; 2025 Infinite Wordle. All rights reserved.</p>
             </div>
         </div>
