--- a/connections.html
+++ b/connections.html
@@ -182,7 +182,48 @@
         </section>
     </main>
 
-    <div class="footer-bottom">
+     <footer class="footer" id="about">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-widget">
+                    <h4 class="widget-title">About</h4>
+                    <p class="widget-text">Infinite Wordle is your destination for unlimited word puzzle fun. We collect the best logic, word, and spelling games in one place without daily restrictions.</p>
+                    <div class="social-links">
+                        <a href="#" class="social-link" aria-label="Twitter">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer-widget">
+                    <h4 class="widget-title">Games</h4>
+                    <ul class="widget-links">
+                        <li><a href="/">Wordle</a></li>
+                        <li><a href="/connections.html">Connections</a></li>
+                        <li><a href="/spelling-bee.html">Spelling Bee</a></li>
+                        <li><a href="/crossword.html">The Crossword</a></li>
+                        <li><a href="/mini-crossword.html">The Mini</a></li>
+                    </ul>
+                </div>                             
+
+                <div class="footer-widget">
+                    <h4 class="widget-title">Subscribe</h4>
+                    <p class="widget-text">Get new game alerts.</p>
+                    <form class="subscribe-form" id="subscribeForm">
+                        <input type="email" placeholder="Enter your email" class="subscribe-input" required>
+                        <button type="submit" class="subscribe-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M5 12h14"></path>
+                                <path d="m12 5 7 7-7 7"></path>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
                 <div class="footer-logo">
                     <svg class="logo-icon" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="32" height="32" fill="currentColor"/>
