--- a/crossword.html
+++ b/crossword.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Solve the full-sized puzzle grid using the 'Across' and 'Down' clues.</p>
                 
                 <div class="game-wrapper" style="max-width: 800px; height: 900px;">
-                    <iframe src="https://puzzlepage.com/crosswords/daily" title="Daily Crossword Game" allowfullscreen></iframe>
+                    <iframe src="https://azalyarahmatika.github.io/crossword-puzzle-game/" title="Daily Crossword Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
