--- a/crossword.html
+++ b/crossword.html
@@ -23,7 +23,7 @@
     {
       "@context": "https://schema.org",
       "@type": "VideoGame",
-      "name": "The Daily Crossword",
+      "name": "Crossword Unlimited",
       "description": "A challenging full-size crossword puzzle available to play anytime.",
       "url": "https://infinitewordle.github.io/crossword.html",
       "applicationCategory": "GameApplication",
@@ -41,7 +41,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <title>The Crossword | Infinite Wordle Games</title>
+    <title>Crossword Unlimited| Infinite Wordle Games</title>
     
     <link rel="stylesheet" href="styles.css">
 </head>
