--- a/letter-boxed.html
+++ b/letter-boxed.html
@@ -23,7 +23,7 @@
     {
       "@context": "https://schema.org",
       "@type": "VideoGame",
-      "name": "Letter Boxed",
+      "name": "Letter Boxed Unlimited",
       "description": "Form a chain of words using letters placed on the sides of a square, aiming to use all letters in as few words as possible.",
       "url": "https://infinitewordle.github.io/letter-boxed.html",
       "applicationCategory": "GameApplication",
@@ -99,11 +99,11 @@
                 <div class="hero-badge">
                     <span class="badge">WORD CHAIN</span>
                 </div>
-                <h1 class="hero-title">Solve the<br><span style="color: #fa5252;">Letter Boxed</span></h1>
+                <h1 class="hero-title">Solve the<br><span style="color: #fa5252;">Letter Boxed Unlimited</span></h1>
                 <p class="hero-subtitle">Connect letters from opposite sides of the box to form a chain of words.</p>
                 
                 <div class="game-wrapper" style="max-width: 500px; height: 500px;">
-                    <iframe src="https://wordplay.com/letter-boxed-daily" title="Letter Boxed Game" allowfullscreen></iframe>
+                    <iframe src="infinitewordle.github.io/letter-boxed.html" title="Letter Boxed Unlimited Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
