--- a/letter-boxed.html
+++ b/letter-boxed.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Connect letters from opposite sides of the box to form a chain of words.</p>
                 
                 <div class="game-wrapper" style="max-width: 500px; height: 500px;">
-                    <iframe src="infinitewordle.github.io/letter-boxed.html" title="Letter Boxed Unlimited Game" allowfullscreen></iframe>
+                    <iframe src="infinitewordle.github.io/letter-boxed-unlimited.html" title="Letter Boxed Unlimited Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
