--- a/mini-crossword.html
+++ b/mini-crossword.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">A smaller, 5x5 version of the crossword puzzle, perfect for a short break.</p>
                 
                 <div class="game-wrapper" style="max-width: 500px; height: 500px;">
-                    <iframe src="https://amuselabs.com/mini-crossword/embed" title="Mini Crossword Game" allowfullscreen></iframe>
+                    <iframe src="https://franbowden.github.io/Mini-Crossword/" title="Mini Crossword Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
