--- a/letter-boxed.html
+++ b/letter-boxed.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CXJTCKFWQL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1NMW2WL8F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-CXJTCKFWQL');
+      gtag('config', 'G-S1NMW2WL8F');
     </script>
     
     <meta charset="UTF-8">
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Connect letters from opposite sides of the box to form a chain of words.</p>
                 
                 <div class="game-wrapper" style="max-width: 500px; height: 500px;">
-                    <iframe src="https://infinitewordle.github.io/letter-boxed-unlimited.html" title="Letter Boxed Game" allowfullscreen></iframe>
+                    <iframe src="/letter-boxed-unlimited.html" height="200" width="300" title="Iframe Example"></iframe>
                 </div>
 
                 <div class="hint-text">
