--- a/letter-boxed.html
+++ b/letter-boxed.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Connect letters from opposite sides of the box to form a chain of words.</p>
                 
                 <div class="game-wrapper" style="max-width: 500px; height: 500px;">
-                    <iframe src="/letter-boxed-unlimited.html" height="600" width="800" title="Iframe Example"></iframe>
+                    <iframe src="/letter-boxed-unlimited.html" height="600" width="800" title=""></iframe>
                 </div>
 
                 <div class="hint-text">
