--- a/letter-boxed.html
+++ b/letter-boxed.html
@@ -103,8 +103,13 @@
                 <p class="hero-subtitle">Connect letters from opposite sides of the box to form a chain of words.</p>
                 
                 <div class="game-wrapper" style="max-width: 500px; height: 500px;">
-                    <iframe src="/letter-boxed-unlimited.html" height="600" width="800" title=""></iframe>
-                </div>
+    <iframe 
+        src="/letter-boxed-unlimited.html" 
+        style="width: 100%; height: 100%; border: none; border-radius: 10px;"
+        title="Letter Boxed Game"
+        allow="fullscreen"
+    ></iframe>
+</div>
 
                 <div class="hint-text">
                     <p>The total word count to use all letters is your score.</p>
