--- a/spelling-bee.html
+++ b/spelling-bee.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Create words using the letters in the hive, always including the center letter.</p>
                 
                 <div class="game-wrapper">
-                    <iframe src="https://customspellingbee.com/embed" title="Spelling Bee Game" allowfullscreen></iframe>
+                    <iframe src="https://spelling-bee-free.pages.dev/" title="Spelling Bee Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
