--- a/tiles.html
+++ b/tiles.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Clear the board by finding groups of three tiles that share a common visual trait.</p>
                 
                 <div class="game-wrapper" style="max-width: 650px; height: 700px;">
-                    <iframe src="https://puzzles.ms/tiles-unlimited" title="Tiles Game" allowfullscreen></iframe>
+                    <iframe src="https://baldoalessandro.github.io/tiles_game/" title="Tiles Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
