--- a/strands.html
+++ b/strands.html
@@ -103,7 +103,7 @@
                 <p class="hero-subtitle">Swipe and connect letters to form a list of words linked by a single theme.</p>
                 
                 <div class="game-wrapper" style="max-width: 600px; height: 750px;">
-                    <iframe src="https://filaments.hrfee.pw/" title="Strands Game" allowfullscreen></iframe>
+                    <iframe src="https://strands-dupe.vercel.app/play" title="Strands Game" allowfullscreen></iframe>
                 </div>
 
                 <div class="hint-text">
