Update and rename strands-unlimited.html to strands.html

--- a/strands.html
+++ b/strands.html
@@ -99,7 +99,7 @@
                 <div class="hero-badge">
                     <span class="badge">WORD CONNECTION</span>
                 </div>
-                <h1 class="hero-title">Unravel<br><span style="color: #ff6b6b;">Strands</span></h1>
+                <h1 class="hero-title">Strands<br><span style="color: #ff6b6b;">Unlimited</span></h1>
                 <p class="hero-subtitle">Swipe and connect letters to form a list of words linked by a single theme.</p>
                 
                 <div class="game-wrapper" style="max-width: 600px; height: 750px;">
